Add 'Copy to css' functionality
You can grab just a single icon with this button, if you do not need to
use the whole Bootstrap icon library.

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,11 +11,19 @@
 .ul-icon-list li {
 	list-style-type: none;
 	margin-bottom: 3px;
+	position: relative;
 }
 .ul-icon-list li span {
 	padding-left: 5px;
 	cursor: pointer;
 }
+.ul-icon-list li .copy {
+	opacity: 0;
+	transition: 0.1s;
+	-moz-transition: 0.1s;
+	-webkit-transition: 0.1s;
+}
+.ul-icon-list li:hover .copy { opacity: 1 }
 .hidden  {
 	display: none;
 }
